--- a/index.html
+++ b/index.html
@@ -6,53 +6,44 @@
     <title>Document</title>
     <link rel="stylesheet" href="./index.css">
 </head>
+
 <body>
+
     <header>
-        <img class="me" src="./img/WhatsApp Image 2023-11-27 at 20.48.09.jpeg" alt="">    
-        <h1>
-         Michal Tesfu
-         </h1>
+        <img class="me" src="./img/WhatsApp Image 2023-11-27 at 20.48.09.jpeg" alt="Michal's image">    
+        <h1>Michal Tesfu</h1>
     </header>
    
-   <nav>
+<nav>
    <ul>
-    <li><a href="
-        ">Lab01 - Home Page </a></li>
-    <li><a href="">Lab02 - About Me </a></li>
-    <li><a href="">Lab02 - Recipe</a></li>
-    <li><a href="">Lab03 - Movie Review</a></li>
-    <li><a href="">Lab04 </a></li>
-    <LI><a href="">Lab05</a></LI>
-    <li><a href="">Lab06</a></li>
-    <li><a href="">Lab07</a></li>
-    <li><a href="">Lab08</a></li>
-    <li><a href="">Lab09</a></li>
-    <li><a href="">Lab0710</a></li>
-    <li><a href="">Final Project</a></li>
-
+    <li><a href="./Create homepage.pdf">Lab01 - Home Page </a></li>
+    <li><a href="lab02">Lab02 - About Me </a></li>
+    <li><a href="lab02">Lab02 - Recipe</a></li>
+    <li><a href="lab03">Lab03 - Movie Review</a></li>
+    <li><a href="lab04">Lab04 </a></li>
+    <li><a href="lab05">Lab05</a></li>
+    <li><a href="lab06">Lab06</a></li>
+    <li><a href="lab07">Lab07</a></li>
+    <li><a href="lab08">Lab08</a></li>
+    <li><a href="lab09">Lab09</a></li>
+    <li><a href="lab010">Lab0710</a></li>
+    <li><a href="final_project">Final Project</a></li>
+  </ul>
 </nav>
-</ul>
+
 <div>
     <footer >
+        <a class="mik" href ="https://validator.w3.org/check?url=https://github.com/michaltesfu/CS472/actions/runs/7014166179">
+            <img src="./w3c-html5-logo.png" alt="Valid HTML!"/>
+        </a>
     <pre>
     &copy; 
     Michal Tesfu,
-    Maharsi University of Computer Sciene
+    Maharsi University of Computer Science
     Address: 1000 N4th ST., Fairfield,Iowa,52557
     Email: ghebrekidanmichal@gmail.com
-</pre>
-<p>
-<a href="https://validator.w3.org/check?url={put-your-webpage-url-here}">
-    <img src="./w3c-html5-logo.png" alt="Valid HTML!"/>
-     </a>
-     </p>
-     <p>
-
-        <a href="https://validator.w3.org/check?url={put-your-webpage-url-here}">
-            <img src="./w3c-html5-logo.png" alt="Valid HTML!"/>
-             </a>
-             </p>
-</footer></div>
-
+    </pre>  
+</footer>
+</div>
 </body>
 </html>
