--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="./index.css">
+    <title>michal.com</title>
 </head>
 
 <body>
 
     <header>
-        <img class="me" src="./img/WhatsApp Image 2023-11-27 at 20.48.09.jpeg" alt="Michal's image">    
+    
+        <img class="me" src="./mikal.jpg"alt="Michal's_image">    
         <h1>Michal Tesfu</h1>
     </header>
    
@@ -33,7 +34,7 @@
 
 <div>
     <footer >
-        <a class="mik" href ="https://validator.w3.org/check?url=https://github.com/michaltesfu/CS472/actions/runs/7014166179">
+        <a class="mik" href ="https://validator.w3.org/check?url=https://michaltesfu.github.io/CS472/">
             <img src="./w3c-html5-logo.png" alt="Valid HTML!"/>
         </a>
     <pre>
