--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
     
-        <img class="me" src="./mikal.jpg"alt="Michal's_image">    
+        <img class="me" src="./mikal.jpg"alt="Michal_image">    
         <h1>Michal Tesfu</h1>
     </header>
    
