--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
     <header>
     
-        <img class="me" src="./mikal.jpg"alt="Michal_image">    
+        <img class="me" src="./mikal.jpg" alt="Michal_image">    
         <h1>Michal Tesfu</h1>
     </header>
    
 <nav>
    <ul>
-    <li><a href="./Create homepage.pdf">Lab01 - Home Page </a></li>
-    <li><a href="lab02">Lab02 - About Me </a></li>
+    <li><a href="./lab01.pdf">Lab01 - Home Page</a></li>
+    <li><a href="lab02">Lab02 - About Me</a></li>
     <li><a href="lab02">Lab02 - Recipe</a></li>
     <li><a href="lab03">Lab03 - Movie Review</a></li>
-    <li><a href="lab04">Lab04 </a></li>
+    <li><a href="lab04">Lab04</a></li>
     <li><a href="lab05">Lab05</a></li>
     <li><a href="lab06">Lab06</a></li>
     <li><a href="lab07">Lab07</a></li>
