--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <nav>
    <ul>
     <li><a href="./lab01.pdf">Lab01 - Home Page</a></li>
-    <li><a href="lab02">Lab02 - About Me</a></li>
+    <li><a href="https://michaltesfu.github.io/lab2./">Lab02 - About Me</a></li>
     <li><a href="lab02">Lab02 - Recipe</a></li>
     <li><a href="lab03">Lab03 - Movie Review</a></li>
     <li><a href="lab04">Lab04</a></li>
